--- a/src/review/sample.fxml
+++ b/src/review/sample.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
-<GridPane fx:controller="sample.Controller"
+<GridPane fx:controller="review.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="20" vgap="20">
     <VBox prefWidth="800" alignment="CENTER">
         <VBox alignment="CENTER">
