--- a/src/jp/naist/review.fxml
+++ b/src/jp/naist/review.fxml
@@ -1,28 +1,24 @@
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<GridPane fx:controller="review.Controller"
+<GridPane fx:controller="jp.naist.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="20" vgap="20">
     <VBox prefWidth="800" alignment="CENTER">
         <VBox alignment="CENTER">
             <Text fx:id="foreText" textAlignment="CENTER" wrappingWidth="800">
                 Fore text
             </Text>
-            <TextField fx:id="blank" maxWidth="150" minWidth="150" onKeyPressed="#handleAnswerEntered">
+            <TextField fx:id="answerTextField" maxWidth="150" minWidth="150" onKeyPressed="#handleAnswerEntered">
 
             </TextField>
             <Text fx:id="postText" textAlignment="CENTER" wrappingWidth="800">
                 post text
             </Text>
         </VBox>
-        <Text fx:id="result">
+        <Text fx:id="resultText">
 
         </Text>
         <Button fx:id="nextButton" onMouseClicked="#handleNextButtonPressed">
